--- a/package.json
+++ b/package.json
@@ -1,4 +1,18 @@
 {
-  "name": "application-name",
-  "version": "0.0.1"
+  "name": "Car Rental",
+  "version": "0.0.0",
+  "dependencies": {},
+  "scripts": {
+    "test": ""
+  },
+  "devDependencies": {
+
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vped/rental.git"
+  },
+  "engines": {
+    "node": ">=0.10.0"
+  }
 }
