--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "themeTemplete",
-  "version": "0.0.0",
+  "name": "car-rental",
+  "version": "1.0.0",
   "dependencies": {
     "angular-animate": "~1.5.3",
     "angular-cookies": "~1.5.3",
@@ -18,10 +18,24 @@
     "angular-advanced-searchbox": "^3.0.0",
     "ngstorage": "^0.3.10",
     "angular-breadcrumb": "^0.4.1",
-    "angular-translate":"2.11.1"
+    "angular-translate": "2.5.0",
+    "angular-translate-loader-static-files": "2.5.0",
+    "angular-translate-storage-local": "2.5.0",
+    "angular-translate-handler-log": "2.5.0",
+    "font-awesome": "4.3.0",
+    "angular-dynamic-locale": "0.1.27",
+    "angular-i18n": "1.3.13",
+    "ng-table-to-csv": "^0.3.1",
+    "flag-icon-css": "^2.4.0"
   },
   "resolutions": {
     "angular": "~1.5.3",
+    "angular-cookies": "~1.5.3",
     "angular-bootstrap": "1"
+  },
+  "devDependencies": {
+    "angular-ui-select": "^0.19.4",
+    "jquery": "^3.1.0",
+    "bootstrap": "^3.3.7"
   }
 }
