--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "angular-dynamic-locale": "0.1.27",
     "angular-i18n": "1.3.13",
     "ng-table-to-csv": "^0.3.1",
-    "flag-icon-css": "^2.4.0"
+    "flag-icon-css": "^2.4.0",
+    "satellizer": "^0.15.5"
   },
   "resolutions": {
     "angular": "~1.5.3",
